Updated -Xmx and -XX:MaxMetaspaceSize to match defaults in main OpenNMS project.